--- a/app/views/bookings/_editBooking.html.erb
+++ b/app/views/bookings/_editBooking.html.erb
@@ -6,11 +6,11 @@
 		<div class="panel-body"> 
 
 			<p>
-			<% if @booking == nil%> </p>
+				<% if @booking == nil%> 
 				<h1>Nao possui agendamentos</h1>
 				<% else @booking.disciplina %>
 				<% end %>
-
-			</div> 
-		</div>
+			</p>
+		</div> 
 	</div>
+</div>
