--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -8,9 +8,9 @@
 			<!-- Logo -->
 			<a href="" class="logo">
 				<!-- mini logo for sidebar mini 50x50 pixels -->
-				<span class="logo-mini"><b>L</b>Book</span>
+				<span class="logo-mini"><b>Labs</b>B</span>
 				<!-- logo for regular state and mobile devices -->
-				<span class="logo-lg"><b>Labs</b>Book</span>
+				<span class="logo-lg"><b>Labs</b>Booking</span>
 			</a>
 
 			<!-- Header Navbar: style can be found in header.less -->
@@ -94,7 +94,7 @@
 				<div class="row">
 					<div id = "div_id" class="book">
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-5">
 						<div id="calendar"></div>
 					</div>
 				</div>
