--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -22,7 +22,7 @@
           <tr>
             <td><%= user.name %></td>
             <td><%= link_to 'Show', user %></td>
-            <td><%= link_to 'Edit', edit_user_path(user) %></td>
+            <td><%= link_to 'Edit', edit_user_path(user.id), remote: true %></td>
             <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
           <% end %>
@@ -31,7 +31,7 @@
 
       <br>
 
-      <%= link_to 'New User', new_user_path, id:"new_link" %>
+      <%= link_to 'New User', new_user_path, remote: true %>
 
     </div><!-- end panel-body --> 
   </div>
