--- a/app/views/users/index.js.erb
+++ b/app/views/users/index.js.erb
@@ -2,4 +2,5 @@ $('#profile').remove();
 $('#book').remove();
 $('#setupUser').remove();
 $('#editBooking').remove();
+$('#newuser').remove();
 $('#div_id').hide().after('<%= escape_javascript(render("index")) %>');
