--- a/app/views/users/new.js.erb
+++ b/app/views/users/new.js.erb
@@ -3,4 +3,4 @@ $('#book').remove();
 $('#setupUser').remove();
 $('#editBooking').remove();
 $('#newuser').remove();
-$('#div_id').hide().after('<%= escape_javascript(render("book")) %>')
+$('#div_id').hide().after('<%= escape_javascript(render("newuser")) %>');
