--- a/app/views/users/_newuser.html.erb
+++ b/app/views/users/_newuser.html.erb
@@ -1,6 +1,12 @@
-<h1>New User</h1>
 
-<%= form_for(@user) do |f|%>
+<div class="col-md-6" id="newuser">
+  <div class="panel panel-primary"> 
+    <div class="panel-heading"> 
+      <h3 class="panel-title">Editing User</h3> 
+    </div> 
+    <div class="panel-body"> 
+
+      <%= form_for(@user) do |f|%>
 
       <div class="field">
         <%= f.label :name %>
@@ -17,4 +23,7 @@
       </div>
       <% end %> <!-- end form --> 
 
-<%= link_to 'Back', users_path %>
+      <%= link_to 'Back', users_path, remote: true  %>
+    </div><!-- end panel-body --> 
+  </div>
+</div>
