fixing errors of versions

--- a/app/views/aluno/index.html.erb
+++ b/app/views/aluno/index.html.erb
@@ -169,7 +169,7 @@
     <div class="control-sidebar-bg"></div>
 
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
+  <script src="https://lorem-1c6b.kxcdn.com/js/moment.min.js"></script>
 
   <script>
     $(function () {
